[gd_scene load_steps=5 format=2]

[ext_resource path="res://Models/Tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Board.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1.00028, 1 )

[node name="Board" type="Spatial"]
script = ExtResource( 2 )

[node name="Tile11" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 8.74228e-08, 8.74228e-08, 8.74228e-08, -1, 7.64274e-15, 8.74228e-08, 0, -1, 1.95376, 1.15424e-07, -1.03148 )

[node name="Tile12" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 8.74228e-08, 8.74228e-08, 8.74228e-08, -1, 7.64274e-15, 8.74228e-08, 0, -1, 0.636588, 2.73587e-10, -1.02796 )

[node name="Tile13" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 8.74228e-08, 8.74228e-08, 8.74228e-08, -1, 7.64274e-15, 8.74228e-08, 0, -1, -0.670086, -1.1396e-07, -1.02796 )

[node name="Tile21" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 8.74228e-08, 8.74228e-08, 8.74228e-08, -1, 7.64274e-15, 8.74228e-08, 0, -1, 1.94818, 1.14936e-07, 0.324627 )

[node name="Tile22" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 8.74228e-08, 8.74228e-08, 8.74228e-08, -1, 7.64274e-15, 8.74228e-08, 0, -1, 0.621978, -1.00366e-09, 0.314214 )

[node name="Tile23" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 8.74228e-08, 8.74228e-08, 8.74228e-08, -1, 7.64274e-15, 8.74228e-08, 0, -1, -0.686841, -1.15424e-07, 0.314214 )

[node name="Tile31" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 8.74228e-08, 8.74228e-08, 8.74228e-08, -1, 7.64274e-15, 8.74228e-08, 0, -1, 1.95376, 1.15424e-07, 1.7078 )

[node name="Tile32" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 8.74228e-08, 8.74228e-08, 8.74228e-08, -1, 7.64274e-15, 8.74228e-08, 0, -1, 0.636588, 2.73587e-10, 1.71132 )

[node name="Tile33" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 8.74228e-08, 8.74228e-08, 8.74228e-08, -1, 7.64274e-15, 8.74228e-08, 0, -1, -0.670086, -1.1396e-07, 1.71132 )

[node name="Weight" type="MeshInstance" parent="."]
transform = Transform( 0.253028, 0, 0, 0, 0.253028, 0, 0, 0, 0.253028, 3.25927, 0, 0.144415 )
mesh = SubResource( 1 )

[node name="ClickArea" type="Area" parent="Weight"]

[node name="CollisionShape" type="CollisionShape" parent="Weight/ClickArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 2 )
